--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <title>Solid App</title>
+    <title>Mcmpacme Solid App</title>
   </head>
   <body>
+    <h1>Next.js Solid App <b>deployed with Netlify</b> for Organization-use.</h1>
+    <link><a href="https://jkreb.qzz.io/" rel="org:title">Mcmpacme Solid App</a></link>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
